--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "@types/react": "^17.0.35",
+    "@types/react-native": "^0.66.4",
     "expo": "~43.0.0",
     "expo-sqlite": "~10.0.3",
     "expo-status-bar": "~1.1.0",
@@ -23,8 +25,9 @@
     "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^2.2.4",
     "react-native-safe-area-context": "^3.3.2",
-    "react-native-screens": "^3.9.0",
-    "react-native-web": "0.17.1"
+    "react-native-screens": "~3.8.0",
+    "react-native-web": "0.17.1",
+    "typescript": "^4.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
