--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^2.2.4",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.9.0",
+    "react-native-ui-lib": "^6.3.0",
     "react-native-vector-icons": "^9.0.0",
     "react-native-web": "0.17.1",
     "typescript": "^4.4.4"
