--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "expo": "~43.0.0",
     "expo-sqlite": "~10.0.3",
     "expo-status-bar": "~1.1.0",
+    "md5": "^2.3.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-paper": "^4.10.1",
     "react-native-reanimated": "^2.2.4",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.9.0",
@@ -35,6 +37,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@types/node": "^16.11.9",
     "typescript": "~4.3.5"
   },
   "private": true
