--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.8.3",
     "@react-native-async-storage/async-storage": "^1.15.11",
     "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.6",
@@ -22,9 +23,11 @@
     "md5": "^2.3.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-hook-form": "^7.20.2",
     "react-native": "0.64.3",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-paper": "^4.10.1",
+    "react-native-paper-select": "^0.1.0",
     "react-native-reanimated": "^2.2.4",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.9.0",
@@ -33,7 +36,8 @@
     "react-native-web": "0.17.1",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
-    "typescript": "^4.4.4"
+    "typescript": "^4.4.4",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
